--- a/samples/amazon-nova-samples/agentic-workload/AgentcWorkflow.ipynb
+++ b/samples/amazon-nova-samples/agentic-workload/AgentcWorkflow.ipynb
@@ -616,60 +616,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize Bedrock LLM with Claude 3 Haiku model\n",
-    "LLM = ChatBedrock(client=bedrock_runtime, model_id=\"anthropic.claude-3-haiku-20240307-v1:0\",\n",
+    "# Initialize Bedrock LLM with Amazon Nova model\n",
+    "LLM = ChatBedrock(client=bedrock_runtime, model_id=\"amazon.nova-pro-v1:0\",\n",
     "    model_kwargs=dict(temperature=0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6991997b-d996-4d47-8c44-3cf09a0100fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Query: Find products between 500 and 1000\n",
-      "Response: Thought: I need to search for products within the specified price range.\n",
-      "Action: search_products_by_price_range\n",
-      "Action Input: 500 1000\n",
-      "Results: <products within 500 to 1000 price range>\n",
-      "\n",
-      "Query: Check shipping to 15000\n",
-      "Response: Thought: I need to check shipping availability for the ZIP code 15000.\n",
-      "Action: check_shipping\n",
-      "Action Input: 15000\n",
-      "Results: {\n",
-      "    \"available\": true,\n",
-      "    \"rates\": [\n",
-      "        {\"carrier\": \"USPS\", \"price\": 7.99},\n",
-      "        {\"carrier\": \"FedEx\", \"price\": 12.50},\n",
-      "        {\"carrier\": \"UPS\", \"price\": 10.75}\n",
-      "    ]\n",
-      "}\n",
-      "\n",
-      "Query: Show me Accessories\n",
-      "Response: Results: {'status': 'success', 'products': [{'id': 3, 'name': 'Headphones', 'category': 'Accessories', 'price': 199.99, 'description': 'Wireless noise-canceling headphones', 'stock': 30, 'brand': 'AudioPro'}, {'id': 5, 'name': 'Smartwatch', 'category': 'Accessories', 'price': 299.99, 'description': 'Fitness tracking smartwatch', 'stock': 20, 'brand': 'WearTech'}], 'count': 2}\n",
-      "\n",
-      "Query: Tell me about the Laptop\n",
-      "Response: Thought: I need to get the details of the Laptop product.\n",
-      "Action: get_product_details\n",
-      "Action Input: Laptop\n",
-      "Results: <product details>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Main execution block\n",
     "# Initialize agent and workflow\n",
@@ -836,84 +793,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "14616695-aef3-4545-b8da-d77a16f69e1b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Running model comparison tests...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n",
-      "/opt/conda/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Test results saved to: model_comparison_results_20250115_005026.json\n",
-      "\n",
-      "Summary Statistics:\n",
-      "\n",
-      "Model: anthropic.claude-3-haiku-20240307-v1:0\n",
-      "Average Response Time: 1.47 seconds\n",
-      "Average Output Tokens: 42.00\n",
-      "Success Rate: 100.00%\n",
-      "\n",
-      "Model: anthropic.claude-3-sonnet-20240229-v1:0\n",
-      "Average Response Time: 3.41 seconds\n",
-      "Average Output Tokens: 16.00\n",
-      "Success Rate: 100.00%\n",
-      "\n",
-      "Model: anthropic.claude-3-5-haiku-20241022-v1:0\n",
-      "Average Response Time: 2.80 seconds\n",
-      "Average Output Tokens: 18.00\n",
-      "Success Rate: 100.00%\n",
-      "\n",
-      "Model: anthropic.claude-3-5-sonnet-20241022-v2:0\n",
-      "Average Response Time: 2.95 seconds\n",
-      "Average Output Tokens: 10.00\n",
-      "Success Rate: 100.00%\n",
-      "\n",
-      "Model: amazon.nova-lite-v1:0\n",
-      "Average Response Time: 12.07 seconds\n",
-      "Average Output Tokens: 0.00\n",
-      "Success Rate: 0.00%\n",
-      "\n",
-      "Model: amazon.nova-micro-v1:0\n",
-      "Average Response Time: 1.25 seconds\n",
-      "Average Output Tokens: 14.00\n",
-      "Success Rate: 100.00%\n",
-      "\n",
-      "Model: amazon.nova-pro-v1:0\n",
-      "Average Response Time: 1.61 seconds\n",
-      "Average Output Tokens: 18.00\n",
-      "Success Rate: 100.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Execute model comparison tests\n",
     "# Define test queries and models\n",
@@ -930,13 +813,11 @@
     "]\n",
     "\n",
     "test_models = [\n",
-    "    \"anthropic.claude-3-haiku-20240307-v1:0\",\n",
-    "    \"anthropic.claude-3-sonnet-20240229-v1:0\",\n",
-    "    \"anthropic.claude-3-5-haiku-20241022-v1:0\",\n",
-    "    \"anthropic.claude-3-5-sonnet-20241022-v2:0\",\n",
+    "    \"amazon.nova-pro-v1:0\",\n",
     "    \"amazon.nova-lite-v1:0\",\n",
     "    \"amazon.nova-micro-v1:0\",\n",
-    "    \"amazon.nova-pro-v1:0\"\n",
+    "    \"anthropic.claude-3-5-haiku-20241022-v1:0\",\n",
+    "    \"anthropic.claude-3-5-sonnet-20241022-v2:0\"\n",
     "]\n",
     "\n",
     "results = run_model_comparison_tests(test_queries, test_models)\n",
