product catalog updated

--- a/samples/amazon-nova-samples/agentic-workload/AgentcWorkflow.ipynb
+++ b/samples/amazon-nova-samples/agentic-workload/AgentcWorkflow.ipynb
@@ -124,7 +124,7 @@
     "                'Fitness tracking smartwatch'\n",
     "            ],\n",
     "            'stock': [10, 15, 30, 12, 20],\n",
-    "            'brand': ['TechBrand', 'MobileX', 'AudioPro', 'TabletCo', 'WearTech']\n",
+    "            'brand': ['brand-1', 'brand-2', 'brand-3', 'brand-4', 'brand-5']\n",
     "        })\n",
     "\n",
     "# Define shipping zones with geographic regions and rates\n",
