--- a/samples/amazon-nova-samples/agentic-workload/AgentcWorkflow.ipynb
+++ b/samples/amazon-nova-samples/agentic-workload/AgentcWorkflow.ipynb
@@ -327,7 +327,7 @@
     "        cleaned_text = text.replace('`', '').strip()\n",
     "        #print(cleaned_text)\n",
     "        # Check for final answer\n",
-    "        if \"Results:\" in cleaned_text:\n",
+    "        if \"Results:\" in cleaned_text or \"Final Answer:\" in cleaned_text:\n",
     "            return AgentFinish(\n",
     "                return_values={\"output\": cleaned_text},\n",
     "                log=cleaned_text,\n",
@@ -414,19 +414,20 @@
     "    and check shipping availability.\n",
     "\n",
     "    When using tools, follow these EXACT formats:\n",
-    "    1. For search_products_by_price_range: Use two numbers only (Example: \"500 1000\")\n",
-    "    2. For check_shipping: Use ZIP code only (Example: \"15000\")\n",
-    "    3. For search_products_by_category: Use category name only (Example: \"Electronics\")\n",
-    "    4. For get_product_details: Use product name only (Example: \"Laptop\")\n",
-    "    5. For search_products_by_name: Use product name only (Example: \"Laptop\")\n",
+    "    1. For search_products_by_price_range: Use two numbers only (Example: 500 1000)\n",
+    "    2. For check_shipping: Use ZIP code only (Example: 15000)\n",
+    "    3. For search_products_by_category: Use category name only (Example: Electronics)\n",
+    "    4. For get_product_details: Use product name only (Example: Laptop)\n",
+    "    5. For search_products_by_name: Use product name only (Example: Laptop)\n",
     "\n",
     "    RULES:\n",
     "    1. Use exact formats - no extra words\n",
     "    2. Keep thoughts to one line\n",
     "    3. Answer directly and briefly\n",
     "    4. No explanations or chat\n",
+    "    5. Human like responses\n",
     "    \n",
-    "    IMPORTANT: Your responses must be in one of these two formats:\n",
+    "    IMPORTANT: Your responses must be only in one of these two EXACT formats:\n",
     "\n",
     "    For tool usage:\n",
     "    Thought: <your reasoning>\n",
@@ -806,10 +807,10 @@
     "print(\"\\nRunning model comparison tests...\")\n",
     "\n",
     "test_queries = [\n",
-    "    #\"Find products between 500 and 1000\",\n",
-    "    \"Check shipping to ZIP code: 15000\",\n",
-    "    #\"Show me Accessories\",\n",
-    "    #\"Tell me about the Laptop\"\n",
+    "    \"Find products between 300 and 600\",\n",
+    "    \"Check shipping to ZIP code: 24000\",\n",
+    "    \"Show me Accessories\",\n",
+    "    \"Tell me about the Tablet\"\n",
     "]\n",
     "\n",
     "test_models = [\n",
