model access instructions

--- a/samples/amazon-nova-samples/agentic-workload/AgentcWorkflow.ipynb
+++ b/samples/amazon-nova-samples/agentic-workload/AgentcWorkflow.ipynb
@@ -7,7 +7,23 @@
    "source": [
     "# E-commerce Agent Implementation with LangChain and AWS Bedrock\n",
     "\n",
-    "This notebook implements an intelligent e-commerce assistant using LangChain for agent creation and AWS Bedrock for LLM capabilities.\n",
+    "This notebook implements an intelligent e-commerce assistant using LangChain for agent creation and Amazon Nova model capabilities.\n",
+    "\n",
+    "To execute the cells in this notebook you need to enable access to the following models on Bedrock:\n",
+    "    \n",
+    "* Amazon Nova Pro\n",
+    "\n",
+    "(Optional for model comparison)\n",
+    "\n",
+    "* Amazon Nova Lite\n",
+    "* Amazon Nova Micro\n",
+    "* Anthropic Claude Sonnet 3.5\n",
+    "* Anthropic Claude Hauiku 3.5\n",
+    "\n",
+    "    \n",
+    "see [Add or remove access to Amazon Bedrock foundation models](https://docs.aws.amazon.com/bedrock/latest/userguide/model-access-modify.html) to manage the access to models in Amazon Bedrock.\n",
+    "\n",
+    "Note: This notebook uses [Langchain](https://www.langchain.com/) to generate the agenctic workload. We make use of some Langchain features such as [react agent](https://python.langchain.com/v0.1/docs/modules/agents/agent_types/react/)\n",
     "\n",
     "## Initial Imports and Setup\n",
     "\n",
@@ -20,29 +36,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1bf91b79-ec6a-401c-857d-b28fed35cfa2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Any, Dict, List\n",
+    "import re\n",
+    "import time\n",
+    "import json\n",
     "import pandas as pd\n",
     "import boto3\n",
+    "from typing import Any, Dict, List, Union\n",
     "from langchain import hub\n",
     "from langchain.agents import create_react_agent, tool, AgentOutputParser\n",
     "from langchain.schema import AgentFinish, AgentAction\n",
     "from langchain.tools import tool\n",
-    "from langchain_community.llms import Bedrock\n",
     "from langchain_core.agents import AgentFinish\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
     "from langgraph.graph import END, Graph\n",
-    "from pydantic import BaseModel, Field\n",
-    "from langchain_aws import ChatBedrock\n",
-    "from typing import Union\n",
-    "import re\n",
-    "import time\n",
-    "from datetime import datetime\n",
-    "import json"
+    "from pydantic import BaseModel\n",
+    "from langchain_aws import ChatBedrock"
    ]
   },
   {
@@ -61,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5f47c427-3a6d-4dc5-bbf0-2b1a0b1150d8",
    "metadata": {},
    "outputs": [],
@@ -99,33 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c6e025e5-6243-4fde-bf0a-0e33c87f8988",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to load product catalog from CSV file or create default catalog\n",
-    "def load_product_catalog():\n",
-    "    try:\n",
-    "        # Attempt to load from CSV file\n",
-    "        return pd.read_csv('products.csv')\n",
-    "    except FileNotFoundError:\n",
-    "        # Create default catalog with sample products if file not found\n",
-    "        return pd.DataFrame({\n",
-    "            'id': range(1, 6),\n",
-    "            'name': ['Laptop', 'Smartphone', 'Headphones', 'Tablet', 'Smartwatch'],\n",
-    "            'category': ['Electronics', 'Electronics', 'Accessories', 'Electronics', 'Accessories'],\n",
-    "            'price': [999.99, 699.99, 199.99, 449.99, 299.99],\n",
-    "            'description': [\n",
-    "                'High-performance laptop',\n",
-    "                'Latest smartphone model',\n",
-    "                'Wireless noise-canceling headphones',\n",
-    "                '10-inch tablet',\n",
-    "                'Fitness tracking smartwatch'\n",
-    "            ],\n",
-    "            'stock': [10, 15, 30, 12, 20],\n",
-    "            'brand': ['brand-1', 'brand-2', 'brand-3', 'brand-4', 'brand-5']\n",
-    "        })\n",
+    "# Create default catalog with sample products\n",
+    "PRODUCT_CATALOG = pd.DataFrame({\n",
+    "        'id': range(1, 6),\n",
+    "        'name': ['Laptop', 'Smartphone', 'Headphones', 'Tablet', 'Smartwatch'],\n",
+    "        'category': ['Electronics', 'Electronics', 'Accessories', 'Electronics', 'Accessories'],\n",
+    "        'price': [999.99, 699.99, 199.99, 449.99, 299.99],\n",
+    "        'description': [\n",
+    "            'High-performance laptop',\n",
+    "            'Latest smartphone model',\n",
+    "            'Wireless noise-canceling headphones',\n",
+    "            '10-inch tablet',\n",
+    "            'Fitness tracking smartwatch'\n",
+    "        ],\n",
+    "        'stock': [10, 15, 30, 12, 20],\n",
+    "        'brand': ['brand-1', 'brand-2', 'brand-3', 'brand-4', 'brand-5']\n",
+    "    })\n",
     "\n",
     "# Define shipping zones with geographic regions and rates\n",
     "# Each zone contains:\n",
@@ -153,10 +160,7 @@
     "        'base_rate': 9.99,\n",
     "        'zip_codes': range(60001, 80000)\n",
     "    }\n",
-    "}\n",
-    "\n",
-    "# Load product catalog into global variable\n",
-    "PRODUCT_CATALOG = load_product_catalog()"
+    "}"
    ]
   },
   {
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d70a9383-bb2f-452b-921f-4282ca6702fd",
    "metadata": {},
    "outputs": [],
@@ -309,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3205012f-bc4a-49b2-869a-849119dcf611",
    "metadata": {},
    "outputs": [],
@@ -396,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ae7f7277-a34b-4827-b176-3d7e7fd7d830",
    "metadata": {},
    "outputs": [],
@@ -464,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e3c196fd-88e4-4749-8938-6a82c6afce34",
    "metadata": {},
    "outputs": [],
@@ -534,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "df65b153-9ea5-4ad7-95f5-b5e4a70f8004",
    "metadata": {},
    "outputs": [],
@@ -547,7 +551,6 @@
     "    # Handles errors and updates execution state\n",
     "\n",
     "    try:\n",
-    "        #print(data)\n",
     "        agent_action = data.pop('agent_outcome')\n",
     "        tool_to_use = {t.name: t for t in TOOLS}[agent_action.tool]\n",
     "        observation = tool_to_use.invoke(agent_action.tool_input)\n",
@@ -576,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2ec1b98b-b2cd-4302-86d4-92dc801765a2",
    "metadata": {},
    "outputs": [],
@@ -612,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "775f01c0-8735-4149-8815-f873f785af85",
    "metadata": {},
    "outputs": [],
@@ -651,7 +654,7 @@
     "            \"input\": query,\n",
     "            \"intermediate_steps\": []\n",
     "        })\n",
-    "        \n",
+    "\n",
     "        if result and 'agent_outcome' in result:\n",
     "            if isinstance(result['agent_outcome'], AgentFinish):\n",
     "                output = result['agent_outcome'].return_values.get(\"output\", \"\")\n",
@@ -682,11 +685,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b949a0a5-cddf-4a18-9a21-3f9961501dc4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
+    "\n",
     "# Model comparison and testing functions\n",
     "def run_model_comparison_tests(queries: List[str], models: List[str]) -> Dict:\n",
     "    \"\"\"Runs comparative tests across different models\"\"\"\n",
@@ -721,12 +726,12 @@
     "                if result and 'agent_outcome' in result:\n",
     "                    if isinstance(result['agent_outcome'], AgentFinish):\n",
     "                        output = result['agent_outcome'].return_values.get(\"output\", \"\")\n",
-    "                        output_tokens = len(output.split())  # Simple token count estimation\n",
+    "                        output_len = len(output.split())\n",
     "                        \n",
     "                        test_result = {\n",
     "                            \"query\": query,\n",
     "                            \"response_time\": response_time,\n",
-    "                            \"output_tokens\": output_tokens,\n",
+    "                            \"output_len\": output_len,\n",
     "                            \"status\": \"success\",\n",
     "                            \"output\": output\n",
     "                        }\n",
@@ -734,7 +739,7 @@
     "                        test_result = {\n",
     "                            \"query\": query,\n",
     "                            \"response_time\": response_time,\n",
-    "                            \"output_tokens\": 0,\n",
+    "                            \"output_len\": 0,\n",
     "                            \"status\": \"incomplete\",\n",
     "                            \"output\": None\n",
     "                        }\n",
@@ -742,7 +747,7 @@
     "                    test_result = {\n",
     "                            \"query\": query,\n",
     "                            \"response_time\": response_time,\n",
-    "                            \"output_tokens\": 0,\n",
+    "                            \"output_len\": 0,\n",
     "                            \"status\": \"no_result\",\n",
     "                            \"output\": None\n",
     "                    }\n",
@@ -752,7 +757,7 @@
     "                test_result = {\n",
     "                    \"query\": query,\n",
     "                    \"response_time\": end_time - start_time,\n",
-    "                    \"output_tokens\": 0,\n",
+    "                    \"output_len\": 0,\n",
     "                    \"status\": \"error\",\n",
     "                    \"error\": str(e)\n",
     "                }\n",
@@ -788,7 +793,7 @@
     "Executes comparison tests across models:\n",
     "1. Response time measurement\n",
     "2. Success rate calculation\n",
-    "3. Token usage tracking\n",
+    "3. Length response tracking\n",
     "4. Results storage and reporting"
    ]
   },
@@ -834,12 +839,12 @@
     "    model_runs = model_result[\"results\"]\n",
     "    \n",
     "    avg_response_time = sum(r[\"response_time\"] for r in model_runs) / len(model_runs)\n",
-    "    avg_output_tokens = sum(r[\"output_tokens\"] for r in model_runs) / len(model_runs)\n",
+    "    avg_output_len = sum(r[\"output_len\"] for r in model_runs) / len(model_runs)\n",
     "    success_rate = sum(1 for r in model_runs if r[\"status\"] == \"success\") / len(model_runs) * 100\n",
     "    \n",
     "    print(f\"\\nModel: {model_id}\")\n",
     "    print(f\"Average Response Time: {avg_response_time:.2f} seconds\")\n",
-    "    print(f\"Average Output Tokens: {avg_output_tokens:.2f}\")\n",
+    "    print(f\"Average Output Len: {avg_output_len:.2f}\")\n",
     "    print(f\"Success Rate: {success_rate:.2f}%\")"
    ]
   }
